--- a/rust/apmm/Cargo.toml
+++ b/rust/apmm/Cargo.toml
@@ -3,7 +3,6 @@ name = "apmm"
 version = "0.1.0"
 edition = "2024"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
 name = "apmmcore"
 crate-type = ["cdylib"]
@@ -13,4 +12,11 @@ name = "apmm"
 path = "src/main.rs"
 
 [dependencies]
-pyo3 = "0.25.0"
+pyo3 = { version = "0.23", features = ["abi3-py38"] }
+chrono = { version = "0.4", features = ["serde"] }
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8"
+zip = "2.2"
+flate2 = "1.0"
+tar = "0.4"
+
